Professional redesign: clean layout, typography; rename resume to resume.pdf

--- a/index.html
+++ b/index.html
@@ -1,3 +1,111 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Kavinilavan — Software Developer</title>
+  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Kavinilavan (Kavin) — AI & software developer. Portfolio showcasing projects in web development, AI, and IoT.">
+</head>
+<body>
+  <div class="container">
+    <header class="header">
+      <div class="brand">
+        <h1>Kavinilavan</h1>
+        <div style="color:var(--muted);font-weight:600">AI · Web · IoT</div>
+      </div>
+      <nav class="nav">
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+
+    <main>
+      <section class="hero" id="home">
+        <div class="intro">
+          <h2>Hello — I'm Kavinilavan (Kavin)</h2>
+          <p>I'm a B.Tech student and software developer focused on AI, machine learning, and full‑stack web applications. I build practical solutions that combine data, models and user-centered interfaces to solve real problems.</p>
+          <div class="cta">
+            <a class="btn" href="#projects">View Projects</a>
+            <a class="btn" style="background:transparent;border:1px solid rgba(255,255,255,0.06);margin-left:12px;color:var(--muted)" href="resume.pdf" target="_blank">Download Resume</a>
+          </div>
+        </div>
+        <aside class="photo">
+          <img src="kavin.jpg" alt="Kavinilavan photo">
+        </aside>
+      </section>
+
+      <section id="about" class="section">
+        <div class="card">
+          <h3>About</h3>
+          <p style="color:var(--muted)">I design and implement software and embedded systems with an emphasis on machine learning and automation. Recent work includes AI‑powered traffic management, voice assistant prototypes, and IoT irrigation controllers. I enjoy learning new technologies and applying them to practical problems.</p>
+        </div>
+      </section>
+
+      <section id="skills" class="section">
+        <h3>Skills</h3>
+        <div class="card grid-3">
+          <div>
+            <strong>Languages</strong>
+            <ul class="skills-list">
+              <li>Python</li>
+              <li>JavaScript / Node.js</li>
+              <li>C++</li>
+            </ul>
+          </div>
+          <div>
+            <strong>Web & Tools</strong>
+            <ul class="skills-list">
+              <li>HTML, CSS, React</li>
+              <li>Flask / REST APIs</li>
+              <li>Git, VS Code</li>
+            </ul>
+          </div>
+          <div>
+            <strong>AI & Data</strong>
+            <ul class="skills-list">
+              <li>Machine Learning</li>
+              <li>Data Analysis</li>
+              <li>Model prototyping</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="projects" class="section">
+        <h3>Projects</h3>
+        <div class="card">
+          <ul class="projects-list">
+            <li>
+              <strong>Portfolio Website</strong> — Personal website demonstrating projects and skills.
+            </li>
+            <li>
+              <strong>AI‑Powered Traffic Management</strong> — Prototype for optimizing traffic flow using ML models and realtime data.
+            </li>
+            <li>
+              <strong>Smart Irrigation System</strong> — IoT solution that reduces water usage via sensor-driven scheduling.
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="contact" class="section">
+        <h3>Contact</h3>
+        <div class="card">
+          <p style="color:var(--muted)">Connect with me:</p>
+          <p><a href="https://github.com/kevin11-afk" target="_blank">GitHub</a> · <a href="https://www.linkedin.com/in/kavinilavan-a-342502324/" target="_blank">LinkedIn</a> · <a href="mailto:masterkavin007@gmail.com">Email</a></p>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      © 2025 Kavinilavan — Built with care.
+    </footer>
+  </div>
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
