Refine styling: attractive reduced-motion-friendly background and professional visuals

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Kavinilavan (Kavin) — AI & software developer. Portfolio showcasing projects in web development, AI, and IoT.">
 </head>
 <body>
+  <div class="bg-visuals" aria-hidden="true"></div>
   <div class="container">
     <header class="header">
       <div class="brand">
