Adjust hero and project thumbnails: smaller photo and project cards

--- a/index.html
+++ b/index.html
@@ -75,22 +75,40 @@
         </div>
       </section>
 
-      <section id="projects" class="section">
-        <h3>Projects</h3>
-        <div class="card">
-          <ul class="projects-list">
-            <li>
-              <strong>Portfolio Website</strong> — Personal website demonstrating projects and skills.
-            </li>
-            <li>
-              <strong>AI‑Powered Traffic Management</strong> — Prototype for optimizing traffic flow using ML models and realtime data.
-            </li>
-            <li>
-              <strong>Smart Irrigation System</strong> — IoT solution that reduces water usage via sensor-driven scheduling.
-            </li>
-          </ul>
-        </div>
-      </section>
+        <section id="projects" class="section">
+          <h3>Projects</h3>
+          <div class="card">
+            <ul class="projects-list">
+              <li>
+                <div class="projects-card">
+                  <img class="projects-img" src="portfolio.jpg" alt="Portfolio project">
+                  <div class="info">
+                    <strong>Portfolio Website</strong>
+                    <div class="muted">A polished personal website built to showcase projects and skills.</div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="projects-card">
+                  <img class="projects-img" src="traffic-management.png" alt="Traffic management project">
+                  <div class="info">
+                    <strong>AI‑Powered Traffic Management</strong>
+                    <div class="muted">Prototype for optimizing traffic flow using ML algorithms and live data.</div>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="projects-card">
+                  <img class="projects-img" src="smart irrigation.jpg" alt="Smart irrigation project">
+                  <div class="info">
+                    <strong>Smart Irrigation System</strong>
+                    <div class="muted">IoT system that reduces water usage by scheduling irrigation from sensor data.</div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
 
       <section id="contact" class="section">
         <h3>Contact</h3>
@@ -101,6 +119,9 @@
       </section>
     </main>
 
+    <footer class="footer">
+      © 2025 Kavinilavan — Built with care.
+    </footer>
     <footer class="footer">
       © 2025 Kavinilavan — Built with care.
     </footer>
