--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
         <h3>Contact</h3>
         <div class="card">
           <p style="color:var(--muted)">Connect with me:</p>
-          <p><a href="https://github.com/kevin11-afk" target="_blank">GitHub</a> · <a href="https://www.linkedin.com/in/kavinilavan-a-342502324/" target="_blank">LinkedIn</a> · <a href="mailto:masterkavin007@gmail.com">Email</a></p>
+          <p>
+            <a href="https://github.com/kevin11-afk" target="_blank" rel="noopener">GitHub</a>
+            · <a href="https://www.linkedin.com/in/kavinilavan-a-342502324/" target="_blank" rel="noopener">LinkedIn</a>
+            · <a href="https://www.instagram.com/kavineyy_18" target="_blank" rel="noopener">Instagram</a>
+            · <a href="mailto:masterkavin007@gmail.com">Email</a>
+          </p>
         </div>
       </section>
     </main>
