--- a/index.html
+++ b/index.html
@@ -80,31 +80,31 @@
           <div class="card">
             <ul class="projects-list">
               <li>
-                <div class="projects-card">
+                <button class="projects-card project-btn" data-title="Portfolio Website" data-desc="A polished personal website built to showcase projects and skills." aria-haspopup="dialog">
                   <img class="projects-img" src="portfolio.jpg" alt="Portfolio project">
                   <div class="info">
                     <strong>Portfolio Website</strong>
                     <div class="muted">A polished personal website built to showcase projects and skills.</div>
                   </div>
-                </div>
+                </button>
               </li>
               <li>
-                <div class="projects-card">
+                <button class="projects-card project-btn" data-title="AI‑Powered Traffic Management" data-desc="Prototype for optimizing traffic flow using ML algorithms and live data." aria-haspopup="dialog">
                   <img class="projects-img" src="traffic-management.png" alt="Traffic management project">
                   <div class="info">
                     <strong>AI‑Powered Traffic Management</strong>
                     <div class="muted">Prototype for optimizing traffic flow using ML algorithms and live data.</div>
                   </div>
-                </div>
+                </button>
               </li>
               <li>
-                <div class="projects-card">
+                <button class="projects-card project-btn" data-title="Smart Irrigation System" data-desc="IoT system that reduces water usage by scheduling irrigation from sensor data." aria-haspopup="dialog">
                   <img class="projects-img" src="smart irrigation.jpg" alt="Smart irrigation project">
                   <div class="info">
                     <strong>Smart Irrigation System</strong>
                     <div class="muted">IoT system that reduces water usage by scheduling irrigation from sensor data.</div>
                   </div>
-                </div>
+                </button>
               </li>
             </ul>
           </div>
@@ -127,6 +127,14 @@
   <footer class="footer">
     © 2025 Kavinilavan — Built with care.
   </footer>
+  </div>
+  <!-- Project modal (hidden by default) -->
+  <div id="project-modal" class="modal" role="dialog" aria-hidden="true" aria-labelledby="modal-title" aria-modal="true">
+    <div class="modal-panel" role="document">
+      <button class="modal-close" aria-label="Close project details">×</button>
+      <h3 id="modal-title"></h3>
+      <div id="modal-desc" class="muted"></div>
+    </div>
   </div>
 </body>
 </html>
