--- a/index.html
+++ b/index.html
@@ -48,12 +48,66 @@
       <section id="skills" class="section">
         <h3>Skills</h3>
         <div class="card grid-3">
+          <!-- Interactive skill icons -->
+          <div class="skill-strip" aria-hidden="false">
+            <button class="skill-btn" data-title="Python" data-desc="Python — scripting, data analysis, and ML prototyping." data-proficiency="85">
+              <!-- Python logo (simplified) -->
+              <svg aria-hidden="true" width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4 4h8v2H6v2h6a2 2 0 0 1 2 2v1H4V4z" fill="#3776AB"/>
+                <circle cx="8" cy="7" r="0.9" fill="#fff"/>
+                <path d="M20 20h-8v-2h6v-2h-6a2 2 0 0 1-2-2v-1h10v7z" fill="#FFD43B"/>
+              </svg>
+              <span class="sr-only">Python</span>
+            </button>
+
+            <button class="skill-btn" data-title="JavaScript" data-desc="JavaScript — browser and Node.js for web apps and tooling." data-proficiency="80">
+              <!-- JS logo -->
+              <svg aria-hidden="true" width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <rect width="24" height="24" rx="4" fill="#F7DF1E"/>
+                <text x="50%" y="60%" text-anchor="middle" font-size="12" font-weight="700" fill="#000">JS</text>
+              </svg>
+              <span class="sr-only">JavaScript</span>
+            </button>
+
+            <button class="skill-btn" data-title="HTML & CSS" data-desc="HTML & CSS — semantic markup; responsive and accessible layouts." data-proficiency="85">
+              <!-- HTML/CSS combined simplified -->
+              <svg aria-hidden="true" width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <rect width="24" height="24" rx="4" fill="#E34F26"/>
+                <text x="50%" y="60%" text-anchor="middle" font-size="11" font-weight="700" fill="#fff">HTML</text>
+              </svg>
+              <span class="sr-only">HTML and CSS</span>
+            </button>
+
+            <button class="skill-btn" data-title="React" data-desc="React — component-driven UI and SPA experience." data-proficiency="70">
+              <!-- React atom -->
+              <svg aria-hidden="true" width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="12" cy="12" r="2.2" fill="#61DAFB"/>
+                <g stroke="#61DAFB" stroke-width="1" fill="none">
+                  <ellipse cx="12" cy="12" rx="6.2" ry="2.8" transform="rotate(30 12 12)"/>
+                  <ellipse cx="12" cy="12" rx="6.2" ry="2.8" transform="rotate(-30 12 12)"/>
+                  <ellipse cx="12" cy="12" rx="6.2" ry="2.8"/>
+                </g>
+              </svg>
+              <span class="sr-only">React</span>
+            </button>
+
+            <button class="skill-btn" data-title="Machine Learning" data-desc="Machine learning — model prototyping, evaluation, and data workflows." data-proficiency="75">
+              <!-- ML generic icon -->
+              <svg aria-hidden="true" width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <rect x="3" y="3" width="18" height="18" rx="3" fill="#0ea5ff"/>
+                <path d="M7 8h10v2H7zM7 12h10v6H7z" fill="#042033"/>
+              </svg>
+              <span class="sr-only">Machine Learning</span>
+            </button>
+
+            
+          </div>
           <div>
             <strong>Languages</strong>
             <ul class="skills-list">
               <li>Python</li>
               <li>JavaScript / Node.js</li>
-              <li>C++</li>
+              
             </ul>
           </div>
           <div>
