chore: update index.html (manual edits)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>I'm a B.Tech student and software developer focused on AI, machine learning, and full‑stack web applications. I build practical solutions that combine data, models and user-centered interfaces to solve real problems.</p>
           <div class="cta">
             <a class="btn" href="#projects">View Projects</a>
-            <a class="btn" style="background:transparent;border:1px solid rgba(255,255,255,0.06);margin-left:12px;color:var(--muted)" href="resume.pdf" target="_blank">Download Resume</a>
+            <a class="btn" style="background:transparent;border:1px solid rgba(255,255,255,0.06);margin-left:12px;color:var(--muted)" href="Kavin's proffesional resume.pdf" target="_blank">Download Resume</a>
           </div>
         </div>
         <aside class="photo">
